--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 		<div class="projects">
 			<h3 class="proj_name"><b>GREENERY GURU</b></h3>
-			<a href="../greenery_guru/index.html"><img class="proj_img" src="thumb_greenery_guru.png"></a>
+			<a href="greenery_guru/index.html"><img class="proj_img" src="thumb_greenery_guru.png"></a>
 		</div>
 		<!--
 		<div class="proj_desc">
