--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 	<nav class="nav-home">
-		<a class="nav-link" href="/">Home</a>
+		<a class="nav-link" href="#nav-home">Home</a>
 		<a class="nav-link" href="#bottom">Contact</a>
 	</nav>
 	
