--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
 <body>
 	<nav class="nav-home">
-		<a class="nav-link" href="#nav-home">Home</a>
+		<a class="nav-link" href="/">Home</a>
 		<a class="nav-link" href="#bottom">Contact</a>
 	</nav>
 	
-	<div class="flex1">
+	<div class="container_intro">
 	
 		<div class="intro">
 			<p>Hello, my name is</p>
@@ -24,36 +24,37 @@
 		<div class="container_lap">
 			<div class="laptop_container">
 				<img class="laptop" src="img_laptop.webp">
-				<img class="screen" src="./code.webp">
+				<img class="screen" src="./code.webp.">
 			</div>
 		</div>
 		
 	</div>
 	
 	
-	<div class="container_proj">
+	<div class="container_work">
 	
 	<h2>My Work</h2>
-		<div class="proj_desc">
-			<h3 class="proj_name"><b>GREENERY GURU</b></h3>
-			<p>A final project from one of my last courses at NICC. My portion of the project was to work on coding and designing the website.</p>
-		</div>
+	
+	<div class="work_text">
+		<h3 class="proj_name"><b>GREENERY GURU</b></h3>
+		<p>A final project from NICC made with HTML/CSS and Javascript. My portion consisted of coding and designing the website.</p>
+	</div>
 
-		<div class="projects">
-			<h3 class="proj_name"><b>GREENERY GURU</b></h3>
-			<a href="greenery_guru/index.html"><img class="proj_img" src="thumb_greenery_guru.png"></a>
-		</div>
-		<!--
-		<div class="proj_desc">
-			<h3 class="proj_name"><b>DOC'S BREW</b></h3>
-			<p>A website I created for my cousin's business <b>Doc's Brew</b>. This site contains an updating menu of her products as well as information about the shop.</p>
-		</div>
-		
-		<div class="projects">
-			<h3 class="proj_name"><b>DOC'S BREW</b></h3>
-			<a href="../greenery_guru/index.html"><img class="proj_img" src="thumb_docs_brew.png"></a>
-		</div>
-		-->
+	<div class="work_img">
+		<a href="greenery_guru/index.html"><img src="thumb_greenery_guru.png"></a>
+	</div>
+	
+	<div class="divider_line"></div>
+
+	<div class="work_text">
+	<h3 class="proj_name"><b>DOC'S BREW</b></h3>
+		<p>A project I am currently working on for a family members business. This site was created with WordPress.</p>
+	</div>
+	
+	<div class="work_img">
+		<a href="https://mikejolange.wordpress.com/"><img class="proj_img" src="thumb_docs_brew.png"></a>
+	</div>
+
 
 	</div>
 
