--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div class="container_lap">
 			<div class="laptop_container">
 				<img class="laptop" src="img_laptop.webp">
-				<img class="screen" src="./code.webp">
+				<img class="screen" src="code.webp">
 			</div>
 		</div>
 		
